Remove exception declaration in functions signatures. Revert the way adb and iproxy are called.